Blender crash when a "Render Result" as a Texture #50109

Closed
opened 2016-11-24 17:22:32 +01:00 by Alexey Khoral · 8 comments

System Information
Operating system and graphics card:
Xubuntu 16.04 Linux-x86_64, Nvidia Gtx 750Ti, NVIDIA Driver Version: 375.20
Windows 8.1 x32, Intel graphics

Blender Version
Broken: (example: 2.77a abf6f08, 2.78a e8299c8, 2.78 def365e(daily build))

Short description of error
Blender crash when a used "Render Result" as a Texture and click on combined(select pass) list.
Tested on Linux and Windows all time reproduced.

Exact steps for others to reproduce the error

  1. Default scene.
  2. Render OpenGL or Blender Render.
  3. Go to Texture Tab.
  4. Type: Image or Movie -> Image: Render Result.
  5. Click on a combined list.
  6. Crash.
**System Information** Operating system and graphics card: **Xubuntu 16.04** Linux-x86_64, Nvidia Gtx 750Ti, NVIDIA Driver Version: 375.20 Windows 8.1 x32, Intel graphics **Blender Version** Broken: (example: 2.77a abf6f08, 2.78a e8299c8, 2.78 def365e(daily build)) **Short description of error** Blender crash when a used "Render Result" as a Texture and click on combined(select pass) list. Tested on Linux and Windows all time reproduced. **Exact steps for others to reproduce the error** 1) Default scene. 2) Render OpenGL or Blender Render. 3) Go to Texture Tab. 4) Type: Image or Movie -> Image: Render Result. 5) Click on a combined list. 6) Crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @allkhor

Added subscriber: @allkhor
Author
[blender.crash.txt](https://archive.blender.org/developer/F405906/blender.crash.txt)
Author

blender_crash.gif

![blender_crash.gif](https://archive.blender.org/developer/F405907/blender_crash.gif)
Member

Added subscribers: @Sergey, @Blendify

Added subscribers: @Sergey, @Blendify
Member

I can confirm @Sergey I think this one is for you?

I can confirm @Sergey I think this one is for you?

This issue was referenced by 1c21e088f2

This issue was referenced by 1c21e088f22d5658a3d96121303b01f7d27d23c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50109
No description provided.