Fix T50109: Blender crash when a "Render Result" as a Texture

This commit fixes crash, but user feedback can be improved here to
inform artist that one can't use Render Result as a texture since that
will cause feedback loop.